# Flutter-Earth

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_DEBUG_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_README.md  CRASH_PREVENTION_FINAL_SUMMARY.md  DEBUGGING_FIXES.md  DatasetDetailsDialog.qml  EARTH_ENGINE_SETUP.md  ENHANCED_V2_README.md  FE Old.py  Flutter earth V2.py  MASSIVE_DEBUG_OPTIMIZATION_FINAL_SUMMARY.md  README.md  README_CRAWLER.md  TAB_FIXES_SUMMARY.md  TESSERACT_INSTALL_GUIDE.md  THEMING_GUIDE.md  advanced_earth_engine_crawler.py  analytics_dashboard.py  body_analysis.txt  catalog_viewer.py  clean_satellite_viewer.py  cleanup.ps1  cleanup_all.ps1  config_utils.py  console_log.txt  crawler_config.yaml  crawler_gui.py  crawler_output.txt  crawler_ui.py  create_shortcuts.ps1  debug_crawler.py  debug_test.py  demo_auth.py  enhanced_crawler_ui.py  extract_ee_catalog.py  fix_git_push.ps1  flutter earth.py  flutter_earth_6-19.py  flutter_earth_auth.json  (+56 more)
Flutter-Earth-old/: .gitignore  README.md  fix_theme_quotes.py  generated_themes.js  migrate_all_themes.py  startup_coordinator.py
backend/: README_GEE_CRAWLER.md  catalog_viewer.html  earth_engine_processor.py  earth_engine_processor_enhanced.py  gee_catalog_crawler_enhanced.md  gee_catalog_crawler_enhanced.py  gee_catalog_crawler_enhanced_v2.py  gee_catalog_viewer.html
dead_the_third/: README.md  requirements.txt  setup.py
docs/: DEBUGGING_FIXES.md  ENHANCED_TAB_SYSTEM.md  NEW_AUTH_LOGIC.md  README.md  README_GEE_CRAWLER.md  THEME_ENHANCEMENTS_SUMMARY.md  THEMING_GUIDE.md
docs_md/: DOWNLOAD_ISSUE_ANALYSIS.md  ENHANCED_AUTHENTICATION_SYSTEM.md  README.md  TAB_DEBUG_SUMMARY.md
electron-app/: about.css  about.html  about.js  data-viewer.css  data-viewer.html  data-viewer.js  download.css  download.html  download.js  index-analysis.css  index-analysis.html  index-analysis.js  index.html  install_deps.sh  main.js  package.json  preload.js  progress.css  progress.html  progress.js  renderer.js  settings.css  settings.html  settings.js  style.css  vector-download.css  vector-download.html  vector-download.js
extracted_data/: dataset_10_20250714_211709.json  dataset_11_20250714_211709.json  dataset_12_20250714_211709.json  dataset_13_20250714_211709.json  dataset_14_20250714_211709.json  dataset_15_20250714_211709.json  dataset_16_20250714_211709.json  dataset_17_20250714_211709.json  dataset_18_20250714_211709.json  dataset_19_20250714_211709.json  dataset_1_20250714_211709.json  dataset_20_20250714_211709.json  dataset_21_20250714_211709.json  dataset_22_20250714_211709.json  dataset_23_20250714_211709.json  dataset_24_20250714_211709.json  (+35 more)
flutter_earth/: LICENSE  README.md  __init__.py  auth_setup.py  config.py  data_viewer.py  earth_engine.py  gui.py  gui_components.py  index_analysis.py  processing.py  pyproject.toml  requirements.txt  sample_manager.py  satellite_info.py  setup.py  themes.py  types.py  utils.py  vector_download.py
flutter_earth/examples/: basic_usage.py
flutter_earth/src/flutter_earth/: __init__.py  main.py
flutter_earth/src/flutter_earth/core/: __init__.py  config_manager.py  download_manager.py  earth_engine_manager.py  progress_tracker.py  types.py
flutter_earth/src/flutter_earth/gui/: __init__.py  main_window.py  qml_engine.py
flutter_earth/src/flutter_earth/gui/qml/: AppDialog.qml  AreaTimeGroup.qml  ControlsGroup.qml  DataViewerTab.qml  DownloadTab.qml  IndexAnalysisTab.qml  InputDialog.qml  LogConsole.qml  MainWindow.qml  MapPanel.qml  OutputGroup.qml  PostProcessingTab.qml  ProcessingGroup.qml  SatelliteInfoTab.qml  Sidebar.qml  VectorDownloadTab.qml  main.qml
flutter_earth/src/flutter_earth/utils/: __init__.py  file_utils.py  logging_setup.py  validation.py
flutter_earth/tests/: test_basic.py
frontend/: app.css  (+45 more)
(+311 files in other folders)
