[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flutter-earth"
version = "1.0.0"
description = "A modern tool for downloading and processing satellite imagery from Google Earth Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flutter Earth Project", email = "contact@flutterearth.org"}
]
maintainers = [
    {name = "Flutter Earth Project", email = "contact@flutterearth.org"}
]
keywords = ["earth-engine", "satellite", "imagery", "gis", "remote-sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "rasterio>=1.2.0",
    "pyshp>=2.1.0",
    "folium>=0.12.0",
    "requests>=2.26.0",
    "python-dateutil>=2.8.2",
    "earthengine-api>=0.1.290",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "scikit-image>=0.19.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "fiona>=1.8.0",
    "pyproj>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/flutter-earth/flutter-earth"
Documentation = "https://flutter-earth.readthedocs.io"
Repository = "https://github.com/flutter-earth/flutter-earth.git"
"Bug Tracker" = "https://github.com/flutter-earth/flutter-earth/issues"
"Source Code" = "https://github.com/flutter-earth/flutter-earth"

[project.scripts]
flutter-earth = "flutter_earth.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flutter_earth = ["resources/*", "gui/qml/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "earthengine.*",
    "folium.*",
    "rasterio.*",
    "shapefile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests as GUI tests",
] 